Fix issue with space in names, build mesh viewer app